--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   http: ^0.13.3
-  draw_graph: ^1.0.0
+#  draw_graph: ^1.0.0
+  fl_chart: ^0.36.2
 
 dev_dependencies:
   flutter_test:
